# ueba-detection-platform

./: LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
deploy/: .env.example  docker-compose.yml
deploy/nginx/: default.conf
detection-api/: .env.example  Dockerfile.dev  Dockerfile.worker  alembic.ini  pyproject.toml  requirements.txt
detection-api/alembic/: env.py
detection-api/app/: main.py  worker.py
detection-api/app/api/v1/: alerts.py  engine.py  entities.py  events.py  health.py  rules.py  stats.py
detection-api/app/api/v2/: cortexxdr.py  delinea.py  ingest.py  process.py  wazuh.py
detection-api/app/core/: config.py  logging.py  redis.py
detection-api/app/db/: session.py
detection-api/app/db/repositories/: event_repo.py
detection-api/app/middleware/: __init__.py  rate_limiter.py
detection-api/app/models/: event.py  rule.py
detection-api/app/schemas/: event.py  health.py  rule.py
detection-api/app/services/: anomaly_detector.py  event_service.py  risk_scoring.py  rule_engine.py
detection-api/tests/: test_events.py
detection-dashboard/: .env.example  .gitignore  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
detection-dashboard/nginx/: default.conf
detection-dashboard/src/: App.tsx  index.css
detection-dashboard/src/hooks/: useAlerts.ts  (+2 more)
detection-db/: .env.example  003-rules.sql  Dockerfile  README.md  functions.sql  init.sql  migration_003_search_perf.sql
docs/: API.md  ARCHITECTURE.md  DATABASE.md  PROXY_MIGRATION.md  SETUP.md
(+18 files in other folders)
